hphp/hack/test/typecheck/inout/bad_inout_use_arg9.php
<?hh // strict

function f(inout string $s): void {}

class C {
  public static dict<int, string> $x = dict[42 => 'foo'];
}

function test(): void {
  f(inout C::$x[42]);
}
